<resources>
    <string name="app_name">LibraryTimer</string>
    <string name="endSession">End Session</string>
    <string name="scanNow">Scan Now</string>
    <string name="end_time">End Time</string>
    <string name="welcome">Welcome</string>
    <string name="location_id">Location Id</string>
    <string name="price_per_minute">Price Per Minute</string>
    <string name="start_time">Start Time</string>
    <string name="location">Location</string>
    <string name="time_spent">Time Spent</string>
    <string name="timer_start_state">00:00:00</string>
    <string name="minutes_spent">Total Time Spent(In Minutes)</string>
    <string name="amount_to_be_paid">Amount To Be Paid</string>
    <string name="notification_title">Total Time Since Entry</string>
</resources>