<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textSize="@dimen/font_huge"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:scrollbars="none">

            <ViewFlipper
                android:id="@+id/entryFlipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/idTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_id"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/locationIdValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/idTag"
                        app:layout_constraintTop_toBottomOf="@id/idTag"
                        tools:text="some id" />

                    <TextView
                        android:id="@+id/priceTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:text="@string/price_per_minute"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/locationIdValue"
                        app:layout_constraintTop_toBottomOf="@id/locationIdValue" />

                    <TextView
                        android:id="@+id/priceValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/priceTag"
                        app:layout_constraintTop_toBottomOf="@id/priceTag"
                        tools:text="Some Price" />

                    <TextView
                        android:id="@+id/startTimeTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:text="@string/start_time"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/priceValue"
                        app:layout_constraintTop_toBottomOf="@id/priceValue" />

                    <TextView
                        android:id="@+id/startTimeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/startTimeTag"
                        app:layout_constraintTop_toBottomOf="@id/startTimeTag"
                        tools:text="Some time" />

                    <TextView
                        android:id="@+id/locationDetailTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:text="@string/location"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/startTimeValue"
                        app:layout_constraintTop_toBottomOf="@id/startTimeValue" />

                    <TextView
                        android:id="@+id/locationDetailValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/locationDetailTag"
                        app:layout_constraintTop_toBottomOf="@id/locationDetailTag"
                        tools:text="Some location address" />

                    <TextView
                        android:id="@+id/timerTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:text="@string/time_spent"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/locationDetailTag"
                        app:layout_constraintTop_toBottomOf="@id/locationDetailValue" />

                    <TextView
                        android:id="@+id/timerTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/timer_start_state"
                        android:textSize="@dimen/font_large"
                        app:layout_constraintStart_toStartOf="@id/timerTag"
                        app:layout_constraintTop_toBottomOf="@id/timerTag" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/layout_padding_common">

                    <TextView
                        android:id="@+id/totalTimeTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:text="@string/minutes_spent"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/totalTimeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/totalTimeTag"
                        app:layout_constraintTop_toBottomOf="@id/totalTimeTag"
                        tools:text="total time spent" />

                    <TextView
                        android:id="@+id/endTimeTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:text="@string/end_time"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/totalTimeValue"
                        app:layout_constraintTop_toBottomOf="@id/totalTimeValue" />

                    <TextView
                        android:id="@+id/endTimeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/endTimeTag"
                        app:layout_constraintTop_toBottomOf="@id/endTimeTag"
                        tools:text="Rs. " />

                    <TextView
                        android:id="@+id/amountTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:text="@string/amount_to_be_paid"
                        android:textSize="@dimen/font_mid"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/endTimeValue"
                        app:layout_constraintTop_toBottomOf="@id/endTimeValue" />

                    <TextView
                        android:id="@+id/amountValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/amountTag"
                        app:layout_constraintTop_toBottomOf="@id/amountTag" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ViewFlipper>
        </ScrollView>
    </ViewFlipper>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_margin_bottom_small"
        android:text="@string/scanNow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>